--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unleash-docker",
-  "description": "Docker images for unleash.",
+  "description": "Docker image for unleash.",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node index.js",
@@ -17,6 +17,7 @@
     "@passport-next/passport-google-oauth2": "^1.0.0",
     "basic-auth": "^2.0.1",
     "passport": "^0.4.1",
+    "passport-cookie": "^1.0.6",
     "unleash-server": "^3.2.30"
   }
 }
