--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,6 @@ name: Deploy
 # events but only for the master branch
 on:
   push:
-    branches: [ master, customize-for-oauth-proxy ]
-  pull_request:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -19,7 +17,6 @@ jobs:
     env:
       DOCKER_IMAGE_REGISTRY: ${{ secrets.REGISTRY_NAME_DEV }}.azurecr.io/tribia
       DOCKER_IMAGE: unleash
-      DOCKER_IMAGE_TAG: latest
       REGISTRY_NAME: ${{ secrets.REGISTRY_NAME_DEV }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -41,5 +38,5 @@ jobs:
     # Build and publish docker image
     - name: Build and publish docker image
       run: |
-        docker build -t ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG} .
-        docker push ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG}
+        docker build -t ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE} .
+        docker push ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}
