add docker image tag

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
     env:
       DOCKER_IMAGE_REGISTRY: ${{ secrets.REGISTRY_NAME_DEV }}.azurecr.io/tribia
       DOCKER_IMAGE: unleash
+      DOCKER_IMAGE_TAG: 3.2.1
       REGISTRY_NAME: ${{ secrets.REGISTRY_NAME_DEV }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -38,5 +39,5 @@ jobs:
     # Build and publish docker image
     - name: Build and publish docker image
       run: |
-        docker build -t ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE} .
-        docker push ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}
+        docker build -t ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG} .
+        docker push ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG}
