--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@passport-next/passport-google-oauth2": "^1.0.0",
     "basic-auth": "^2.0.1",
     "passport": "^0.4.1",
-    "passport-cookie": "^1.0.6",
+    "passport-http-header-strategy": "^1.0.4",
     "unleash-server": "^3.2.30"
   }
 }
