--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,5 @@ jobs:
     - name: Build and publish docker image
       run: |
         docker build -t ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG} .
-        docker push ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG}
+        docker tag ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG} latest
+        docker push ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}
