--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,5 @@ jobs:
     # Build and publish docker image
     - name: Build and publish docker image
       run: |
-        docker build -t ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG} .
-        docker tag ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG} latest
+        docker build -t ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_TAG} -t latest .
         docker push ${DOCKER_IMAGE_REGISTRY}/${DOCKER_IMAGE}
